# dynamic_doc_generator

./: .editorconfig  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-docs-bug.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
dynamic_doc_generator/: __init__.py  cli.py  generator.py  parser.py  state.py
dynamic_doc_generator/rules/: exceptions.py  operators.py  rules.py
dynamic_doc_generator/rules/languages/: makefile_operators.py  makefile_rules.py
tests/: __init__.py  test_dynamic_doc_generator.py
tests/test_files/makefile/: CommentTest  EnvTest  PhonyTest
