[tool.poetry]
name = "dynamic_doc_generator"
version = "0.1.0"
description = "Tool for creating, parsing and formatting custom rules for extracting information from any file"
authors = ["Ariel Torti <arieltorti14@gmail.com>"]
license = "MIT"
readme = "README.rst"
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        "Programming Language :: Python :: 2",
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pip = "=19.2.3"
bump2version = "=0.5.11"
wheel = "=0.33.6"
watchdog = "=0.9.0"
flake8 = "=3.7.8"
tox = "=3.14.0"
coverage = "=4.5.4"
Sphinx = "=1.8.5"
twine = "=1.14.0"
pytest = "=4.6.5"
pytest-runner = "=5.1"
pudb = "^2019.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
